--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </nav>
     <h1>Bienvenue sur Echec et Mat</h1>
     
-    <img src="images/I2.png" alt="Échiquier avec des pièces" width="350" height="auto"  >
+    <img src="I2.png" alt="Échiquier avec des pièces" width="350" height="auto"  >
     <br>
     <br>
     <p>Votre plateforme qui vous permet d'être bon au jeu d'echecs</p>
