--- a/lecons.html
+++ b/lecons.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="page_d_accueil.html">Accueil</a></li>
+        <li><a href="index.html">Accueil</a></li>
         <li><a href="lecons.html">Leçons</a></li>
         <li><a href="contacts.html">Contact</a></li>
       </ul>
@@ -19,7 +19,7 @@
   </header>
 
   <div class="image-right">
-    <img src="images/imagereine.jpg" alt="Stratégie aux échecs">
+    <img src="imagereine.jpg" alt="Stratégie aux échecs">
   </div>
   
  
