--- a/regles.html
+++ b/regles.html
@@ -11,7 +11,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="page_d_accueil.html">Accueil</a></li>
+        <li><a href="index.html">Accueil</a></li>
         <li><a href="lecons.html">Leçons</a></li>
         <li><a href="contacts.html">Contact</a></li>
       </ul>
