--- a/deplacement.html
+++ b/deplacement.html
@@ -11,7 +11,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="page_d_accueil.html">Accueil</a></li>
+        <li><a href="index.html">Accueil</a></li>
         <li><a href="lecons.html">Leçons</a></li>
         <li><a href="contacts.html">Contact</a></li>
       </ul>
@@ -22,7 +22,7 @@
  
  <section>
     <h2>1. Le Roi (&#9818;)</h2>
-    <img src="images/Roi.png" alt="Déplacement du roi" width="300" height="auto">
+    <img src="/Roi.png" alt="Déplacement du roi" width="300" height="auto">
     <p>Le Roi est la pièce la plus importante. Il peut se déplacer d'une case dans n'importe quelle direction : <br>
         verticalement, horizontalement ou en diagonale. Le roi ne peut pas se déplacer dans une case où il serait en échec.</p>
   </section>
@@ -45,14 +45,14 @@
   
   <section>
     <h2>4. Le Fou (&#9821;)</h2>
-    <img src="images/Fou.png" alt="Déplacement du fou" width="300" height="auto">
+    <img src="Fou.png" alt="Déplacement du fou" width="300" height="auto">
     <p>Le Fou se déplace sur une distance illimitée, mais uniquement en diagonale. Chaque fou reste toujours <br>
         sur la couleur de sa case de départ (cases blanches ou noires).</p>
   </section>
 
 <section>
     <h2>5. Le Cavalier (&#9822;)</h2>
-    <img src="images/Cavalier.png" alt="Déplacement du cavalier" width="300" height="auto">
+    <img src="Cavalier.png" alt="Déplacement du cavalier" width="300" height="auto">
     <p>Le Cavalier a un déplacement unique en forme de "L" : deux cases dans une direction <br>
         (horizontalement ou verticalement) puis une case perpendiculaire. Il peut sauter par-dessus d'autres pièces.</p>
   </section>
@@ -60,7 +60,7 @@
   
   <section>
     <h2>6. Le Pion (&#9823;)</h2>
-    <img src="images/Pion.png" alt="Déplacement du pion" width="300" height="auto">
+    <img src="Pion.png" alt="Déplacement du pion" width="300" height="auto">
     <p>Le Pion avance d'une case en ligne droite, mais capture une pièce en se déplaçant d'une case en diagonale. <br>
         Lors de son premier déplacement, un pion peut avancer de deux cases.</p>
         <br>
