Update disposition .html

--- a/disposition .html
+++ b/disposition .html
@@ -11,7 +11,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="page_d_accueil.html">Accueil</a></li>
+        <li><a href="index.html">Accueil</a></li>
         <li><a href="lecons.html">Leçons</a></li>
         <li><a href="contacts.html">Contact</a></li>
       </ul>
@@ -31,7 +31,7 @@
       <li>La dame &#9819; se place entre le fou et la reine.</li>
       <li>Le roi &#9818; se place à côté de la dame.</li>
     </ul>
-    <img src="images/I3.png" alt="Disposition des pièces sur l'échiquier" >
+    <img src="I3.png" alt="Disposition des pièces sur l'échiquier" >
      <br>
     <a href="deplacement.html" class="btn">Suivant</a>
   </section>
