--- a/deplacement.html
+++ b/deplacement.html
@@ -38,7 +38,7 @@
   
   <section>
     <h2>3. La Tour (&#9820;)</h2>
-    <img src="images/Tour.png" alt="Déplacement de la tour" width="300" height="auto">
+    <img src="Tour.png" alt="Déplacement de la tour" width="300" height="auto">
     <p>La Tour se déplace sur une distance illimitée, mais uniquement en ligne droite : horizontalement ou verticalement.</p>
   </section>
 
