--- a/deplacement.html
+++ b/deplacement.html
@@ -22,7 +22,7 @@
  
  <section>
     <h2>1. Le Roi (&#9818;)</h2>
-    <img src="/Roi.png" alt="Déplacement du roi" width="300" height="auto">
+    <img src="Roi.png" alt="Déplacement du roi" width="300" height="auto">
     <p>Le Roi est la pièce la plus importante. Il peut se déplacer d'une case dans n'importe quelle direction : <br>
         verticalement, horizontalement ou en diagonale. Le roi ne peut pas se déplacer dans une case où il serait en échec.</p>
   </section>
@@ -30,7 +30,7 @@
   
   <section>
     <h2>2. La Dame (&#9819;)</h2>
-    <img src="images/Reine.png" alt="Déplacement de la dame" width="300" height="auto">
+    <img src="Reine.png" alt="Déplacement de la dame" width="300" height="auto">
     <p>La Dame est la pièce la plus puissante. Elle peut se déplacer sur une distance illimitée en ligne droite :<br>
          horizontalement, verticalement ou en diagonale.</p>
   </section>
